Update docs: workspace profile sync, engine map, AI worklog, onboarding
- Add ENGINE_SYNC_MAP.md documenting wizard→engine overlay mapping
- Add WORKSPACE_PROFILE_SYNC.md for sync bridge architecture
- Add PROFILE_COMPILER_REGRESSION.md for compiler test plan
- Add INTERWEAVE_PDF_CONTEXT.md for AI agent PDF corpus reference
- Add docs/README.md navigation index and ai/README.md workflow guide
- Add SESSION_LOG and UI_MODERNIZATION_NOTES from recent sessions
- Update AI_WORKLOG.md with recent session entries
- Update DEVELOPER_ONBOARDING.md, SECURITY.md, CREDENTIAL_ROTATION.md
- Consolidate SYSTEM_READY.md to remove outdated status sections
- Update CLAUDE.md with TS_MODE, WorkspaceProfile, and auth API docs

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>